--- a/public/filipino/ginataang_manok/index.html
+++ b/public/filipino/ginataang_manok/index.html
@@ -23,19 +23,19 @@ TipGet some Nice fatty Coconut milk, i’d say around 40% upwards. This dish, a
     <meta itemprop="name" content="Ginataang Manok :: Ray&#39;s Recipe&#39;s">
     <meta itemprop="description" content="ForewordThis is the Recipe i use to make Ginataang Manok, also called a Chicken Coconut Stew. As always, keep in mind i go alot by feeling! adjust it to your liking. The list of spices used will be at the very end if you dont have them at home!
 TipGet some Nice fatty Coconut milk, i’d say around 40% upwards. This dish, as well as many other versions have alot of freedom! as long as the core ingridients are correct&#34;">
-    <meta itemprop="wordCount" content="343">
+    <meta itemprop="wordCount" content="334">
     <title>Ginataang Manok :: Ray&#39;s Recipe&#39;s</title>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747777739" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747777739" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1747777739" rel="stylesheet">
-    <link href="/css/theme.css?1747777739" rel="stylesheet">
-    <link href="/css/format-html.css?1747777739" rel="stylesheet" id="R-format-style">
-    <link href="/css/auto-complete/auto-complete.min.css?1747777739" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1747777739" defer></script>
-    <script src="/js/lunr/lunr.min.js?1747777739" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1747777739" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1747777739" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1747777739" defer></script>
-    <script src="/js/search.js?1747777739" defer></script>
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747782719" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747782719" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1747782719" rel="stylesheet">
+    <link href="/css/theme.css?1747782719" rel="stylesheet">
+    <link href="/css/format-html.css?1747782719" rel="stylesheet" id="R-format-style">
+    <link href="/css/auto-complete/auto-complete.min.css?1747782719" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1747782719" defer></script>
+    <script src="/js/lunr/lunr.min.js?1747782719" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1747782719" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1747782719" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1747782719" defer></script>
+    <script src="/js/search.js?1747782719" defer></script>
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -45,7 +45,7 @@ TipGet some Nice fatty Coconut milk, i’d say around 40% upwards. This dish, a
       window.relearn.relBaseUri='..\/..';
       window.relearn.absBaseUri='http:\/\/localhost:1313';
       window.relearn.contentLangs=['en'];
-      window.relearn.index_js_url="/searchindex.en.js?1747777739";
+      window.relearn.index_js_url="/searchindex.en.js?1747782719";
       window.relearn.disableAnchorCopy=false;
       window.relearn.disableAnchorScrolling=false;
       window.relearn.disableInlineCopyToClipboard=false;
@@ -170,32 +170,12 @@ TipGet some Nice fatty Coconut milk, i’d say around 40% upwards. This dish, a
   </div>
 </details>
 <h2 id="shopping-list">Shopping list!</h2>
-<table>
-  <thead>
-      <tr>
-          <th>Name of the Item</th>
-          <th style="text-align: right">Amount</th>
-      </tr>
-  </thead>
-  <tbody>
-      <tr>
-          <td>Chicken Wings</td>
-          <td style="text-align: right">500g</td>
-      </tr>
-      <tr>
-          <td>Coconut milk</td>
-          <td style="text-align: right">1 can</td>
-      </tr>
-      <tr>
-          <td>Onions, Potatos, Carrots, Garlic, Ginger and Vinegar</td>
-          <td style="text-align: right">&mdash;</td>
-      </tr>
-      <tr>
-          <td>Fish sauce</td>
-          <td style="text-align: right">&mdash;</td>
-      </tr>
-  </tbody>
-</table>
+<ol>
+<li>Chicken Wings</li>
+<li>Coconut milk</li>
+<li>Onions, Potatos, Carrots (the veg)</li>
+<li>Garlic, Ginger and Vinegar (flavouring)</li>
+</ol>
 <h2 id="a-hearty-stew">A hearty Stew</h2>
 <h6 id="preprep-chop-the-veg-roughly-the-potatos-and-carrots-rather-big-while-the-rest-is-roughly-copped">preprep: chop the veg roughly, the potatos and carrots rather big while the rest is roughly copped.</h6>
 <h6 id="1st-add-some-oil-and-fry-the-onions-garlic-and-the-ginger-off-medium---high-is-good-until-you-can-smell-them">1st. add some oil and fry the onions, garlic and the ginger off, medium - high is good, until you can smell them.</h6>
@@ -309,8 +289,8 @@ TipGet some Nice fatty Coconut milk, i’d say around 40% upwards. This dish, a
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1747777739" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1747777739" defer></script>
-    <script src="/js/theme.js?1747777739" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1747782719" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1747782719" defer></script>
+    <script src="/js/theme.js?1747782719" defer></script>
   </body>
 </html>
