--- a/public/indian/tika_masala/index.html
+++ b/public/indian/tika_masala/index.html
@@ -23,19 +23,19 @@ Tipif you want to make this, marinate the chicken for a day for the best result
     <meta itemprop="name" content="Chicken tikka masala :: Ray&#39;s Recipe&#39;s">
     <meta itemprop="description" content="ForewordThis is the Recipe i use to make Chicken Tikka Masala. as always, keep in mind i go alot by feeling! adjust it to your liking. the list of spices used will be at the very end if you dont have them at home!
 Tipif you want to make this, marinate the chicken for a day for the best result! or at least a couple of hours">
-    <meta itemprop="wordCount" content="417">
+    <meta itemprop="wordCount" content="410">
     <title>Chicken tikka masala :: Ray&#39;s Recipe&#39;s</title>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747777739" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747777739" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1747777739" rel="stylesheet">
-    <link href="/css/theme.css?1747777739" rel="stylesheet">
-    <link href="/css/format-html.css?1747777739" rel="stylesheet" id="R-format-style">
-    <link href="/css/auto-complete/auto-complete.min.css?1747777739" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1747777739" defer></script>
-    <script src="/js/lunr/lunr.min.js?1747777739" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1747777739" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1747777739" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1747777739" defer></script>
-    <script src="/js/search.js?1747777739" defer></script>
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747782719" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747782719" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1747782719" rel="stylesheet">
+    <link href="/css/theme.css?1747782719" rel="stylesheet">
+    <link href="/css/format-html.css?1747782719" rel="stylesheet" id="R-format-style">
+    <link href="/css/auto-complete/auto-complete.min.css?1747782719" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1747782719" defer></script>
+    <script src="/js/lunr/lunr.min.js?1747782719" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1747782719" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1747782719" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1747782719" defer></script>
+    <script src="/js/search.js?1747782719" defer></script>
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -45,7 +45,7 @@ Tipif you want to make this, marinate the chicken for a day for the best result
       window.relearn.relBaseUri='..\/..';
       window.relearn.absBaseUri='http:\/\/localhost:1313';
       window.relearn.contentLangs=['en'];
-      window.relearn.index_js_url="/searchindex.en.js?1747777739";
+      window.relearn.index_js_url="/searchindex.en.js?1747782719";
       window.relearn.disableAnchorCopy=false;
       window.relearn.disableAnchorScrolling=false;
       window.relearn.disableInlineCopyToClipboard=false;
@@ -176,36 +176,14 @@ or at least a couple of hours</p>
   </div>
 </details>
 <h2 id="shopping-list">Shopping list!</h2>
-<table>
-  <thead>
-      <tr>
-          <th>Name of the Item</th>
-          <th style="text-align: right">Amount</th>
-      </tr>
-  </thead>
-  <tbody>
-      <tr>
-          <td>Chicken Breast / thigh</td>
-          <td style="text-align: right">500g</td>
-      </tr>
-      <tr>
-          <td>Yogurt</td>
-          <td style="text-align: right">&mdash;</td>
-      </tr>
-      <tr>
-          <td>Tomato Sauce</td>
-          <td style="text-align: right">400ml</td>
-      </tr>
-      <tr>
-          <td>Heavy cream</td>
-          <td style="text-align: right">200ml</td>
-      </tr>
-      <tr>
-          <td>Onions, lemons</td>
-          <td style="text-align: right">&mdash;</td>
-      </tr>
-  </tbody>
-</table>
+<ol>
+<li>Chicken Breast / thigh</li>
+<li>Yogurt</li>
+<li>Tomato Sauce</li>
+<li>Heavy cream</li>
+<li>Onions</li>
+<li>Lemons / Lemon Juice</li>
+</ol>
 <h2 id="marinating-the-chicken">Marinating the chicken</h2>
 <h5 id="cut-the-chicken-into-small-bite-size-pieces-put-it-into-a-bowl-with">Cut the chicken into small bite size pieces, put it into a bowl with:</h5>
 <h6 id="salt-pepper-1-tsp-tumeric-1-tsp-garam-masala-1-3-tbsp-chili-powder-4-tbsp-yogurt-1-tsp-garlic-powder-1-tsp-ginger-powder-1-2-tsp-of-lemon-juice-and-finally-a-bit-of-oil">Salt, Pepper, 1 Tsp Tumeric, 1 Tsp Garam Masala, 1-3 TBsp Chili Powder, 4 TBsp Yogurt, 1 Tsp Garlic powder, 1 Tsp Ginger powder, 1-2 Tsp of Lemon juice, and finally a bit of oil!</h6>
@@ -324,8 +302,8 @@ or at least a couple of hours</p>
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1747777739" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1747777739" defer></script>
-    <script src="/js/theme.js?1747777739" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1747782719" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1747782719" defer></script>
+    <script src="/js/theme.js?1747782719" defer></script>
   </body>
 </html>
