--- a/public/sauces_n_condiments/index.html
+++ b/public/sauces_n_condiments/index.html
@@ -21,17 +21,17 @@
     <meta itemprop="wordCount" content="5">
     <title>Sauces n Condiments :: Ray&#39;s Recipe&#39;s</title>
     <link href="/sauces_n_condiments/index.xml" rel="alternate" type="application/rss+xml" title="Sauces n Condiments :: Ray&#39;s Recipe&#39;s">
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747777739" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747777739" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1747777739" rel="stylesheet">
-    <link href="/css/theme.css?1747777739" rel="stylesheet">
-    <link href="/css/format-html.css?1747777739" rel="stylesheet" id="R-format-style">
-    <link href="/css/auto-complete/auto-complete.min.css?1747777739" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1747777739" defer></script>
-    <script src="/js/lunr/lunr.min.js?1747777739" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1747777739" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1747777739" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1747777739" defer></script>
-    <script src="/js/search.js?1747777739" defer></script>
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747782719" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1747782719" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1747782719" rel="stylesheet">
+    <link href="/css/theme.css?1747782719" rel="stylesheet">
+    <link href="/css/format-html.css?1747782719" rel="stylesheet" id="R-format-style">
+    <link href="/css/auto-complete/auto-complete.min.css?1747782719" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1747782719" defer></script>
+    <script src="/js/lunr/lunr.min.js?1747782719" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1747782719" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1747782719" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1747782719" defer></script>
+    <script src="/js/search.js?1747782719" defer></script>
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -41,7 +41,7 @@
       window.relearn.relBaseUri='..';
       window.relearn.absBaseUri='http:\/\/localhost:1313';
       window.relearn.contentLangs=['en'];
-      window.relearn.index_js_url="/searchindex.en.js?1747777739";
+      window.relearn.index_js_url="/searchindex.en.js?1747782719";
       window.relearn.disableAnchorCopy=false;
       window.relearn.disableAnchorScrolling=false;
       window.relearn.disableInlineCopyToClipboard=false;
@@ -109,7 +109,7 @@
             <li itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement" class=""><span itemprop="name">Sauces n Condiments</span><meta itemprop="position" content="2"></li>
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
-            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="/korean/placeholder/index.html" title="Placeholder (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
+            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="/korean/fried-chicken/index.html" title="KFC (Korean Fried Chicken) (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="/snacks/index.html" title="Snacks (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
@@ -207,8 +207,8 @@
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1747777739" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1747777739" defer></script>
-    <script src="/js/theme.js?1747777739" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1747782719" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1747782719" defer></script>
+    <script src="/js/theme.js?1747782719" defer></script>
   </body>
 </html>
